# hand-tracking-mouse

./: Cargo.toml  README.md
docs/: architecture.md  class_diagram.md  data_flow.md  dependency.md  recommendations.md
models/: HandLandmarkDetector.onnx
src/: main.rs
src/app/: config.rs  fps.rs  mod.rs  run.rs  service.rs  struct.rs  system.rs  types.rs  utils.rs
src/camera/: config.rs  discovery.rs  mod.rs  service.rs  session.rs  struct.rs  system.rs  types.rs  utils.rs
src/config/: mod.rs  service.rs  store.rs  types.rs
src/inference/: config.rs  mod.rs  service.rs  session.rs  struct.rs  system.rs  types.rs  utils.rs
src/pipeline/: config.rs  hand_tracking.rs  mod.rs  service.rs  struct.rs  system.rs  types.rs  utils.rs
src/preferences/: config.rs  mod.rs  struct.rs  system.rs  utils.rs
src/ui/: chooser.rs  config.rs  mod.rs  preview.rs  service.rs  struct.rs  system.rs  types.rs  utils.rs
